--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
         <mybatis-spring.version>1.1.1</mybatis-spring.version>
         <spring.version>4.3.1.RELEASE</spring.version>
         <!--<slf4j.version>1.7.7</slf4j.version>-->
-        <!--<jackson.version>2.5.3</jackson.version>-->
+        <jackson.version>2.5.3</jackson.version>
         <!--<logback.version>1.0.10</logback.version>-->
     </properties>
 
@@ -24,6 +24,25 @@
             <artifactId>junit</artifactId>
             <version>3.8.1</version>
             <scope>test</scope>
+        </dependency>
+
+        <!--json-->
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-xml</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
         </dependency>
 
         <dependency>
@@ -130,6 +149,25 @@
             <artifactId>httpclient</artifactId>
             <version>4.5.2</version>
         </dependency>
+        <dependency>
+            <groupId>net.sourceforge.htmlunit</groupId>
+            <artifactId>htmlunit</artifactId>
+            <version>2.23</version>
+        </dependency>
+
+        <dependency>
+            <groupId>onwer</groupId>
+            <artifactId>onwer</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/net.sourceforge.htmlunit/htmlunit -->
+        <dependency>
+            <groupId>net.sourceforge.htmlunit</groupId>
+            <artifactId>htmlunit</artifactId>
+            <version>2.4</version>
+        </dependency>
+
 
     </dependencies>
     <build>
