新浪社会话题抓取 并定时 每6小时抓取一次

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -40,4 +40,11 @@
     <param-name>contextConfigLocation</param-name>
     <param-value>classpath:applicationContext.xml</param-value>
   </context-param>
+
+  <listener>
+    <listener-class>
+      data.gather.db.SchedulerTest
+    </listener-class>
+  </listener>
+
 </web-app>
