--- a/pom.xml
+++ b/pom.xml
@@ -6,14 +6,11 @@
     <packaging>war</packaging>
     <version>1.0-SNAPSHOT</version>
     <name>onwer Maven Webapp</name>
-    <url>http://maven.apache.org</url>
 
     <properties>
         <mybatis-spring.version>1.1.1</mybatis-spring.version>
         <spring.version>4.3.1.RELEASE</spring.version>
-        <!--<slf4j.version>1.7.7</slf4j.version>-->
         <jackson.version>2.5.3</jackson.version>
-        <!--<logback.version>1.0.10</logback.version>-->
     </properties>
 
 
@@ -94,10 +91,18 @@
             <version>${spring.version}</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/javax.servlet/servlet-api -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>2.5</version>
+        </dependency>
+
+
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.27</version>
+            <version>5.1.31</version>
         </dependency>
 
         <dependency>
@@ -152,22 +157,23 @@
         <dependency>
             <groupId>net.sourceforge.htmlunit</groupId>
             <artifactId>htmlunit</artifactId>
-            <version>2.23</version>
-        </dependency>
-
-        <dependency>
-            <groupId>onwer</groupId>
-            <artifactId>onwer</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-
-        <!-- https://mvnrepository.com/artifact/net.sourceforge.htmlunit/htmlunit -->
-        <dependency>
-            <groupId>net.sourceforge.htmlunit</groupId>
-            <artifactId>htmlunit</artifactId>
             <version>2.4</version>
         </dependency>
 
+
+        <!--kafka-->
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka_2.10</artifactId>
+            <version>0.8.0</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.quartz-scheduler/quartz -->
+        <dependency>
+            <groupId>org.quartz-scheduler</groupId>
+            <artifactId>quartz</artifactId>
+            <version>2.2.1</version>
+        </dependency>
 
     </dependencies>
     <build>
