--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -43,7 +43,7 @@
 
   <listener>
     <listener-class>
-      data.gather.db.SchedulerTest
+      data.gather.db.SchedulerUtil
     </listener-class>
   </listener>
 
