--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
          version="3.0">
   <welcome-file-list>
-    <welcome-file>/pages/index.html</welcome-file>
+    <welcome-file>/login.html</welcome-file>
   </welcome-file-list>
   <!-- Spring MVC配置 -->
   <servlet>
